# rocketrecap2

./: DEVELOPMENT.md  README.md  format.sh  manage.py  pyproject.toml
community_project/: asgi.py  settings.py  urls.py  wsgi.py
community_project/summarizer/: models.py  services.py  utils.py  views.py
community_project/summarizer/templates/summarizer/: summarizer_page.html
summarizer/: forms.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
